[Update] Fix width on firefox

--- a/src/components/pages/LandingPageNew/styles.module.css
+++ b/src/components/pages/LandingPageNew/styles.module.css
@@ -15,6 +15,7 @@
 .text_container {
     display: flex;
     gap: 20px;
+    min-width: fit-content;
 }
 .cityscape_container {
     position: relative;
